another ToDo
//TODO cauta direct dupa abele criterii userId si gameType in acelas timp
TODO recomand sa cauti jocurile dupa userId si sa stergi gamesList din user.